<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="20dp"
    tools:context=".ui.questionnaire.questions.QuestionThree">

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/questionnaire_question_3"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_question">

        <CheckBox
            android:id="@+id/item1"
            style="@style/QuestionnaireCheckbox"
            android:layout_marginTop="16dp"
            android:background="@drawable/questionnaire_background_selector"
            android:buttonTint="@color/questionnaire_text_selector"
            android:text="@string/questionnaire_option_activity_1"
            android:textColor="@color/questionnaire_text_selector" />

        <CheckBox
            android:id="@+id/item2"
            style="@style/QuestionnaireCheckbox"
            android:layout_marginTop="16dp"
            android:background="@drawable/questionnaire_background_selector"
            android:buttonTint="@color/questionnaire_text_selector"
            android:text="@string/questionnaire_option_activity_2"
            android:textColor="@color/questionnaire_text_selector" />

        <CheckBox
            android:id="@+id/item3"
            style="@style/QuestionnaireCheckbox"
            android:layout_marginTop="16dp"
            android:background="@drawable/questionnaire_background_selector"
            android:buttonTint="@color/questionnaire_text_selector"
            android:text="@string/questionnaire_option_activity_3"
            android:textColor="@color/questionnaire_text_selector" />

        <CheckBox
            android:id="@+id/item4"
            style="@style/QuestionnaireCheckbox"
            android:background="@drawable/questionnaire_background_selector"
            android:buttonTint="@color/questionnaire_text_selector"
            android:text="@string/questionnaire_option_activity_4"
            android:textColor="@color/questionnaire_text_selector" />

        <CheckBox
            android:id="@+id/item5"
            style="@style/QuestionnaireCheckbox"
            android:background="@drawable/questionnaire_background_selector"
            android:buttonTint="@color/questionnaire_text_selector"
            android:text="@string/questionnaire_option_activity_5"
            android:textColor="@color/questionnaire_text_selector" />

        <CheckBox
            android:id="@+id/item6"
            style="@style/QuestionnaireCheckbox"
            android:background="@drawable/questionnaire_background_selector"
            android:buttonTint="@color/questionnaire_text_selector"
            android:text="@string/questionnaire_option_activity_6"
            android:textColor="@color/questionnaire_text_selector" />

        <CheckBox
            android:id="@+id/item7"
            style="@style/QuestionnaireCheckbox"
            android:background="@drawable/questionnaire_background_selector"
            android:buttonTint="@color/questionnaire_text_selector"
            android:text="@string/questionnaire_option_activity_7"
            android:textColor="@color/questionnaire_text_selector" />

        <CheckBox
            android:id="@+id/item8"
            style="@style/QuestionnaireCheckbox"
            android:background="@drawable/questionnaire_background_selector"
            android:buttonTint="@color/questionnaire_text_selector"
            android:text="@string/questionnaire_option_activity_8"
            android:textColor="@color/questionnaire_text_selector" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>